<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E5DE"
    tools:context=".LogInFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_btn"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tv_sign_into_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/signin_into_your"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_account_text" />

            <EditText
                android:id="@+id/et_email_log_in"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/dark_red"
                android:drawableEnd="@drawable/ic_baseline_email"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="#8c8c8c"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_text" />

            <TextView
                android:id="@+id/tv_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/account"
                android:textColor="@color/dark_red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sign_into_text" />

            <TextView
                android:id="@+id/tv_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email_log_in" />

            <EditText
                android:id="@+id/et_password_log_in"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints="Password"
                android:backgroundTint="@color/dark_red"
                android:drawableEnd="@drawable/ic_baseline_lock_open"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="#8c8c8c"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password_text" />

            <TextView
                android:id="@+id/tv_forget_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_red"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password_log_in" />

            <ImageView
                android:id="@+id/iv_fb_login"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="140dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/facebook_logo"
                android:src="@drawable/facebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_with_text" />

            <ImageView
                android:id="@+id/iv_google_login"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="13dp"
                android:contentDescription="@string/google_logo"
                android:src="@drawable/googlelogo"
                app:layout_constraintStart_toEndOf="@+id/iv_fb_login"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_with_text" />

            <TextView
                android:id="@+id/tv_login_with_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="32dp"
                android:text="@string/login_with"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forget_password_text" />

            <TextView
                android:id="@+id/tv_already_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="16dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_fb_login" />

            <TextView
                android:id="@+id/tv_sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/register_now"
                android:textColor="@color/red"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tv_already_account"
                app:layout_constraintTop_toTopOf="@+id/tv_already_account" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>